attempted fix for footer on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -81,7 +81,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
